--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 *{
-    background-color: #aaa;
-    color: #aa1;
+    font-family: monospace;
+    background-color: #0a0a0a;
+    color: #cfcfcf;
 }
